# royalroadads.com

./: .gitignore  LICENSE  README.md  ad_entry_manager.py  api.py  archive.py  entry_manager.py  image_utils.py  main.py  pyproject.toml  run.bat  run.ps1  run.py  scraper.py  utils.py  wrangler.jsonc
docs/: CNAME  fiction.json  index.html
docs/300x250/: entries.json
public/: index.html
