[project]
name = "royalroadads"
version = "0.1.0"
description = "Royal Road Ads"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.3.0",
    "pydoll-python",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pyinstrument>=5.0.3",
]

[tool.uv.sources]
pydoll-python = { git = "https://github.com/radiantly/pydoll.git", rev = "retry-on-permission-error" }
