[project]
name = "royalroadads"
version = "0.1.0"
description = "Royal Road Ads"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.3.0",
    "pydoll-python",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pyinstrument>=5.0.3",
    "types-requests>=2.32.4.20250611",
]

[tool.uv.sources]
pydoll-python = { git = "https://github.com/radiantly/pydoll.git", rev = "ignore-errors" }
